# icici_mtf_advisor_fixed

./: README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
icici_mtf_advisor/: __init__.py
icici_mtf_advisor/data/: breeze_client.py
icici_mtf_advisor/domain/: filters.py  normalizer.py
icici_mtf_advisor/engine/: decision.py
icici_mtf_advisor/jobs/: daily_run.py
